// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders with search box if it is not on home 1`] = `
<div
  className="__Header__"
>
  <Connect(Banner) />
  <Adapter
    className="header"
  >
    <Row
      align="middle"
      gutter={
        Object {
          "md": 16,
          "xs": 8,
        }
      }
      type="flex"
    >
      <Col
        lg={4}
        xl={5}
        xs={0}
      >
        <Logo />
      </Col>
      <Col
        lg={12}
        xl={13}
        xs={18}
        xxl={14}
      >
        <Connect(SearchBox) />
      </Col>
      <Col
        lg={8}
        xl={6}
        xs={6}
        xxl={5}
      >
        <Connect(HeaderMenu) />
      </Col>
    </Row>
  </Adapter>
</div>
`;

exports[`Header renders without search box if it is on homepage \`/\` 1`] = `
<div
  className="__Header__"
>
  <Connect(Banner) />
  <Adapter
    className="header"
  >
    <Row
      align="middle"
      gutter={
        Object {
          "md": 16,
          "xs": 8,
        }
      }
      type="flex"
    >
      <Col
        lg={4}
        xl={5}
        xs={0}
      >
        <Logo />
      </Col>
      <Col
        lg={12}
        xl={13}
        xs={18}
        xxl={14}
      />
      <Col
        lg={8}
        xl={6}
        xs={6}
        xxl={5}
      >
        <Connect(HeaderMenu) />
      </Col>
    </Row>
  </Adapter>
</div>
`;
